fix: h1 not rendering on mobile

--- a/src/scss/_fake-html.scss
+++ b/src/scss/_fake-html.scss
@@ -1,7 +1,6 @@
 .html {
   &-code {
     position: relative;
-    color: #FFF;
 
     @at-root %hover-before-after {
       display: none;
